k8s/next-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: realty
  name: next-client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: next-client
          image: fswoon2/alexwfs:realty-tracking
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: regcred
