k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  namespace: realty
  name: ingress-service
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    # REMOVE CLASSNAME ANNOTATION
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # ADD ANNOTATION
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # ADD ANNOTATION
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-samesite: 'true'
    nginx.ingress.kubernetes.io/session-cookie-domain: 'realty.fswoon.au'
spec:
  ingressClassName: nginx
  # ADD INGRESSCLASSNAME FIELD
  rules:
    - host: realty.fswoon.au
      http:
        paths:
          - path: /?(.*)
            # UPDATE PATH
            pathType: ImplementationSpecific
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: next-client-cluster-ip-service
                port:
                  number: 3000
  tls:
    - hosts: 
      - realty.fswoon.au
      secretName: tls-realty-ingress
